--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,10 @@
     "build": "tsc",
     "start": "nodemon node dist/server.js",
     "dev": "ts-node src/server.ts",
-    "seed": "ts-node seed.ts"
+    "seed": "ts-node seed.ts",
+    "test": "jest"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,7 +25,13 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.9.1",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
