--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,15 @@
     "faker": "^6.6.6",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.1",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
