--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "nodemon node dist/server.js",
-    "dev": "ts-node src/server.ts",
+    "dev-norestart": "ts-node src/server.ts",
+    "dev": "nodemon --watch src --exec ts-node src/server.ts",
     "seed": "ts-node seed.ts"
   },
   "keywords": [],
@@ -30,6 +31,7 @@
     "@types/node": "^22.9.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
