--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "faker": "^6.6.6",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.2",
