--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
@@ -23,6 +24,8 @@
     "faker": "^6.6.6",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
@@ -30,6 +33,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
