--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "docs": "typedoc --out ./docs/ ./app/"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.61.5",
@@ -26,8 +27,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "jsdoc": "^4.0.4",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
+    "typedoc": "^0.27.0",
     "typescript": "^5"
   }
 }
